[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/disposable_bld.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=6]
[ext_resource path="res://assets/heart.png" type="Texture" id=7]
[ext_resource path="res://src/Screens/pixel_theme.tres" type="Theme" id=8]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 123.145 ]
}

[node name="heart1" type="TextureRect" parent="." groups=[
"Health",
]]
margin_left = 123.145
margin_right = 653.145
margin_bottom = 380.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart2" type="TextureRect" parent="." groups=[
"Health",
]]
margin_left = 176.393
margin_right = 706.393
margin_bottom = 380.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart3" type="TextureRect" parent="." groups=[
"Health",
]]
margin_left = 227.835
margin_right = 757.835
margin_bottom = 380.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -163.532
margin_top = 13.7025
margin_right = -43.532
margin_bottom = 51.7025
theme = ExtResource( 1 )
text = "Score: %s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0117647, 0.0117647, 0.341176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 5 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -183.817
margin_right = 108.5
margin_bottom = -116.817
text = "Blocky's Adenture"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -88.934
margin_right = 103.0
margin_bottom = 166.066
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_right = 206.0
margin_bottom = 32.0
text = "Resume"

[node name="Control" type="Control" parent="PauseOverlay/VBoxContainer"]
margin_top = 36.0
margin_right = 206.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 30 )

[node name="RetryButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 70.0
margin_right = 206.0
margin_bottom = 108.0
text = "Retry Level"

[node name="Control2" type="Control" parent="PauseOverlay/VBoxContainer"]
margin_top = 112.0
margin_right = 206.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 30 )

[node name="Feedback" type="Button" parent="PauseOverlay/VBoxContainer"]
modulate = Color( 0.00392157, 0.501961, 0.0352941, 1 )
margin_top = 146.0
margin_right = 206.0
margin_bottom = 178.0
text = "Give Feedback"

[node name="Control3" type="Control" parent="PauseOverlay/VBoxContainer"]
margin_top = 182.0
margin_right = 206.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 30 )

[node name="QuitButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 216.0
margin_right = 206.0
margin_bottom = 254.0

[node name="MusicCheck" type="CheckBox" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -94.0333
margin_right = 43.0
margin_bottom = -62.0333
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseOverlay/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/Feedback" to="." method="_on_Feedback_pressed"]
[connection signal="toggled" from="PauseOverlay/MusicCheck" to="." method="_on_MusicCheck_toggled"]
